fix/ align auth from to center

--- a/client/src/components/auth/Auth.module.scss
+++ b/client/src/components/auth/Auth.module.scss
@@ -1,7 +1,16 @@
 .formBlock {
   display: flex;
   justify-content: center;
-  background-color: #f3fcfe;
+  background-color: #ffffff;
   border-radius: 15px;
   padding: 20px;
+}
+
+.root {
+  width: 400px;
+  margin: 50px auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -90%);
 }
